# ARCH

./: CMakeLists.txt  README.md
matrix_optimizations/include/: matrix.h
matrix_optimizations/src/: matrix.cpp
matrix_optimizations/tests/: driver.cpp
